Change approach to how exceptions propagate out of write procedures

--- a/docs/event-loop.texi
+++ b/docs/event-loop.texi
@@ -932,20 +932,26 @@ thread as that in which the event loop runs.
 
 Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), which
-shouldn't happen unless memory is exhausted.  Subsequent exceptions
-(say, because of port or conversion errors) will propagate out of
-event-loop-run!.
+shouldn't happen unless memory is exhausted.  With versions of this
+library before 0.13, any exceptions because of read errors or
+conversion errors would propagate out of event-loop-run! and could not
+be caught locally.  Having read or conversion errors interfering with
+anything using the event loop in this way was not a good approach, so
+from version 0.13 of this library all read or conversion exceptions
+will propagate in the first instance out of this procedure so that
+they may be caught locally, say by putting a catch expression around
+the call to this procedure, and only out of event-loop-run! if not
+caught in that way.
 
 From version 0.6, the bytes comprising the input text will be
 converted to their string representation using the encoding of 'port'
 if a port encoding has been set, or otherwise using the program's
 default port encoding, or if neither has been set using iso-8859-1
-(Latin-1).  Exceptions from conversion errors will, as mentioned,
-propagate out of event-loop-run!.  Conversion errors should not arise
-with iso-8859-1 encoding, although the string may not necessarily have
-the desired meaning for the program concerned if the input encoding is
-in fact different.  From version 0.7, this procedure uses the
-conversion strategy for 'port' (which defaults at program start-up to
+(Latin-1).  Exceptions from conversion errors should not arise with
+iso-8859-1 encoding, although the string may not necessarily have the
+desired meaning for the program concerned if the input encoding is in
+fact different.  From version 0.7, this procedure uses the conversion
+strategy for 'port' (which defaults at program start-up to
 'substitute); version 0.6 instead always used a conversion strategy of
 'error if encountering unconvertible characters).
 
@@ -1007,24 +1013,30 @@ thread as that in which the event loop runs.
 
 Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), which
-shouldn't happen unless memory is exhausted.  Subsequent exceptions
-(say, because of port or conversion errors) will propagate out of
-event-loop-run!.  Exceptions thrown by 'proc', if not caught locally,
-will also propagate out of event-loop-run!.
+shouldn't happen unless memory is exhausted.  With versions of this
+library before 0.13, any exceptions because of read errors or
+conversion errors would propagate out of event-loop-run! and could not
+be caught locally.  Having read or conversion errors interfering with
+anything using the event loop in this way was not a good approach, so
+from version 0.13 of this library all read or conversion exceptions
+will propagate in the first instance out of this procedure so that
+they may be caught locally, say by putting a catch expression around
+the call to this procedure, and only out of event-loop-run! if not
+caught in that way.  Exceptions raised by 'proc', if not caught
+locally, will also propagate out of event-loop-run!.
 
 This procedure is available from version 0.3.  From version 0.6, the
 bytes comprising the input text will be converted to their string
 representation using the encoding of 'port' if a port encoding has
 been set, or otherwise using the program's default port encoding, or
 if neither has been set using iso-8859-1 (Latin-1).  Exceptions from
-conversion errors will, as mentioned, propagate out of
-event-loop-run!.  Conversion errors should not arise with iso-8859-1
-encoding, although strings may not necessarily have the desired
-meaning for the program concerned if the input encoding is in fact
-different.  From version 0.7, this procedure uses the conversion
-strategy for 'port' (which defaults at program start-up to
-'substitute); version 0.6 instead always used a conversion strategy of
-'error if encountering unconvertible characters).
+conversion errors should not arise with iso-8859-1 encoding, although
+strings may not necessarily have the desired meaning for the program
+concerned if the input encoding is in fact different.  From version
+0.7, this procedure uses the conversion strategy for 'port' (which
+defaults at program start-up to 'substitute); version 0.6 instead
+always used a conversion strategy of 'error if encountering
+unconvertible characters).
 
 From version 0.6, this procedure may be used with an end-of-line
 representation of either a line-feed (\n) or a carriage-return and
@@ -1095,24 +1107,30 @@ thread as that in which the event loop runs.
 
 Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), which
-shouldn't happen unless memory is exhausted.  Subsequent exceptions
-(say, because of port or conversion errors) will propagate out of
-event-loop-run!.  Exceptions thrown by 'proc', if not caught locally,
-will also propagate out of event-loop-run!.
+shouldn't happen unless memory is exhausted.  With versions of this
+library before 0.13, any exceptions because of read errors or
+conversion errors would propagate out of event-loop-run! and could not
+be caught locally.  Having read or conversion errors interfering with
+anything using the event loop in this way was not a good approach, so
+from version 0.13 of this library all read or conversion exceptions
+will propagate in the first instance out of this procedure so that
+they may be caught locally, say by putting a catch expression around
+the call to this procedure, and only out of event-loop-run! if not
+caught in that way.  Exceptions raised by 'proc', if not caught
+locally, will also propagate out of event-loop-run!.
 
 This procedure is available from version 0.4.  From version 0.6, the
 bytes comprising the input text will be converted to their string
 representation using the encoding of 'port' if a port encoding has
 been set, or otherwise using the program's default port encoding, or
 if neither has been set using iso-8859-1 (Latin-1).  Exceptions from
-conversion errors will, as mentioned, propagate out of
-event-loop-run!.  Conversion errors should not arise with iso-8859-1
-encoding, although strings may not necessarily have the desired
-meaning for the program concerned if the input encoding is in fact
-different.  From version 0.7, this procedure uses the conversion
-strategy for 'port' (which defaults at program start-up to
-'substitute); version 0.6 instead always used a conversion strategy of
-'error if encountering unconvertible characters).
+conversion errors should not arise with iso-8859-1 encoding, although
+strings may not necessarily have the desired meaning for the program
+concerned if the input encoding is in fact different.  From version
+0.7, this procedure uses the conversion strategy for 'port' (which
+defaults at program start-up to 'substitute); version 0.6 instead
+always used a conversion strategy of 'error if encountering
+unconvertible characters).
 
 From version 0.6, this procedure may be used with an end-of-line
 representation of either a line-feed (\n) or a carriage-return and
@@ -1176,8 +1194,15 @@ thread as that in which the event loop runs.
 
 Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), which
-shouldn't happen unless memory is exhausted.  Subsequent exceptions
-(say, because of port errors) will propagate out of event-loop-run!.
+shouldn't happen unless memory is exhausted.  With versions of this
+library before 0.13, any exceptions because of read errors would
+propagate out of event-loop-run! and could not be caught locally.
+Having read errors interfering with anything using the event loop in
+this way was not a good approach, so from version 0.13 of this library
+all read exceptions will propagate in the first instance out of this
+procedure so that they may be caught locally, say by putting a catch
+expression around the call to this procedure, and only out of
+event-loop-run! if not caught in that way.
 
 This procedure is first available in version 0.11 of this library.
 @end deffn
@@ -1231,10 +1256,17 @@ thread as that in which the event loop runs.
 
 Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), which
-shouldn't happen unless memory is exhausted.  Subsequent exceptions
-(say, because of port errors) will propagate out of event-loop-run!.
-Exceptions raised by 'proc', if not caught locally, will also
-propagate out of event-loop-run!.
+shouldn't happen unless memory is exhausted.  With versions of this
+library before 0.13, any exceptions because of read errors would
+propagate out of event-loop-run! and could not be caught locally.
+Having read errors interfering with anything using the event loop in
+this way was not a good approach, so from version 0.13 of this library
+all read exceptions will propagate in the first instance out of this
+procedure so that they may be caught locally, say by putting a catch
+expression around the call to this procedure, and only out of
+event-loop-run! if not caught in that way.  Exceptions raised by
+'proc', if not caught locally, will also propagate out of
+event-loop-run!.
 
 This procedure is first available in version 0.11 of this library.
 @end deffn
@@ -1295,10 +1327,17 @@ thread as that in which the event loop runs.
 
 Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), which
-shouldn't happen unless memory is exhausted.  Subsequent exceptions
-(say, because of port errors) will propagate out of event-loop-run!.
-Exceptions raised by 'proc', if not caught locally, will also
-propagate out of event-loop-run!.
+shouldn't happen unless memory is exhausted.  With versions of this
+library before 0.13, any exceptions because of read errors would
+propagate out of event-loop-run! and could not be caught locally.
+Having read errors interfering with anything using the event loop in
+this way was not a good approach, so from version 0.13 of this library
+all read exceptions will propagate in the first instance out of this
+procedure so that they may be caught locally, say by putting a catch
+expression around the call to this procedure, and only out of
+event-loop-run! if not caught in that way.  Exceptions raised by
+'proc', if not caught locally, will also propagate out of
+event-loop-run!.
 
 This procedure is first available in version 0.11 of this library.
 @end deffn
