--- a/docs/event-loop.texi
+++ b/docs/event-loop.texi
@@ -668,9 +668,9 @@ namely the value yielded by the generator.  Each time 'proc' runs it
 will do so as a separate event in the event loop and so be
 multi-plexed with other events.
 
-When 'proc' executes, this procedure will have released 'await' and
-'resume', so they may be used by 'proc' to initiate other asynchronous
-operations sequentially.
+When 'proc' executes, 'await' and 'resume' will still be in use, so
+they may not be used by 'proc' to initiate other asynchronous
+operations.
 
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the event loop runs.
@@ -1004,9 +1004,9 @@ The 'loop' argument is optional: this procedure operates on the event
 loop passed in as an argument, or if none is passed (or #f is passed),
 on the default event loop.
 
-When 'proc' executes, this procedure will have released 'await' and
-'resume', so they may be used by 'proc' to initiate other asynchronous
-operations sequentially.
+When 'proc' executes, 'await' and 'resume' will still be in use, so
+they may not be used by 'proc' to initiate other asynchronous
+operations.
 
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the event loop runs.
@@ -1098,9 +1098,9 @@ The 'loop' argument is optional: this procedure operates on the event
 loop passed in as an argument, or if none is passed (or #f is passed),
 on the default event loop.
 
-When 'proc' executes, this procedure will have released 'await' and
-'resume', so they may be used by 'proc' to initiate other asynchronous
-operations sequentially.
+When 'proc' executes, 'await' and 'resume' will still be in use, so
+they may not be used by 'proc' to initiate other asynchronous
+operations.
 
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the event loop runs.
@@ -1247,9 +1247,9 @@ The 'loop' argument is optional: this procedure operates on the event
 loop passed in as an argument, or if none is passed (or #f is passed),
 on the default event loop.
 
-When 'proc' executes, this procedure will have released 'await' and
-'resume', so they may be used by 'proc' to initiate other asynchronous
-operations sequentially.
+When 'proc' executes, 'await' and 'resume' will still be in use, so
+they may not be used by 'proc' to initiate other asynchronous
+operations.
 
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the event loop runs.
@@ -1318,9 +1318,9 @@ The 'loop' argument is optional: this procedure operates on the event
 loop passed in as an argument, or if none is passed (or #f is passed),
 on the default event loop.
 
-When 'proc' executes, this procedure will have released 'await' and
-'resume', so they may be used by 'proc' to initiate other asynchronous
-operations sequentially.
+When 'proc' executes, 'await' and 'resume' will still be in use, so
+they may not be used by 'proc' to initiate other asynchronous
+operations.
 
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the event loop runs.
