Further documentation tweaks

--- a/docs/event-loop.texi
+++ b/docs/event-loop.texi
@@ -668,10 +668,6 @@ namely the value yielded by the generator.  Each time 'proc' runs it
 will do so as a separate event in the event loop and so be
 multi-plexed with other events.
 
-When 'proc' executes, 'await' and 'resume' will still be in use, so
-they may not be used by 'proc' to initiate other asynchronous
-operations.
-
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the event loop runs.
 
@@ -684,6 +680,10 @@ progress, so blocking calls (other than to the yield procedure) should
 not be made in 'generator'.  This procedure can be useful for the
 purpose of implementing co-operative multi-tasking, say by composing
 tasks with compose-a-sync (see compose.scm).
+
+When 'proc' executes, 'await' and 'resume' will still be in use by
+this procedure, so they may not be reused by 'proc' (even though
+'proc' runs in the event loop thread).
 
 This procedure calls event-post! in the event loop concerned.  This is
 done in the same thread as that in which the event loop runs so it
@@ -1004,12 +1004,12 @@ The 'loop' argument is optional: this procedure operates on the event
 loop passed in as an argument, or if none is passed (or #f is passed),
 on the default event loop.
 
-When 'proc' executes, 'await' and 'resume' will still be in use, so
-they may not be used by 'proc' to initiate other asynchronous
-operations.
-
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the event loop runs.
+
+When 'proc' executes, 'await' and 'resume' will still be in use by
+this procedure, so they may not be reused by 'proc' (even though
+'proc' runs in the event loop thread).
 
 Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), which
@@ -1098,12 +1098,12 @@ The 'loop' argument is optional: this procedure operates on the event
 loop passed in as an argument, or if none is passed (or #f is passed),
 on the default event loop.
 
-When 'proc' executes, 'await' and 'resume' will still be in use, so
-they may not be used by 'proc' to initiate other asynchronous
-operations.
-
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the event loop runs.
+
+When 'proc' executes, 'await' and 'resume' will still be in use by
+this procedure, so they may not be reused by 'proc' (even though
+'proc' runs in the event loop thread).
 
 Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), which
@@ -1247,12 +1247,12 @@ The 'loop' argument is optional: this procedure operates on the event
 loop passed in as an argument, or if none is passed (or #f is passed),
 on the default event loop.
 
-When 'proc' executes, 'await' and 'resume' will still be in use, so
-they may not be used by 'proc' to initiate other asynchronous
-operations.
-
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the event loop runs.
+
+When 'proc' executes, 'await' and 'resume' will still be in use by
+this procedure, so they may not be reused by 'proc' (even though
+'proc' runs in the event loop thread).
 
 Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), which
@@ -1318,12 +1318,12 @@ The 'loop' argument is optional: this procedure operates on the event
 loop passed in as an argument, or if none is passed (or #f is passed),
 on the default event loop.
 
-When 'proc' executes, 'await' and 'resume' will still be in use, so
-they may not be used by 'proc' to initiate other asynchronous
-operations.
-
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the event loop runs.
+
+When 'proc' executes, 'await' and 'resume' will still be in use by
+this procedure, so they may not be reused by 'proc' (even though
+'proc' runs in the event loop thread).
 
 Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), which
