--- a/docs/meeting.texi
+++ b/docs/meeting.texi
@@ -43,10 +43,11 @@ Synchronization occurs at the moment that the exchange of the datum
 takes place.  Once one of the "pseudo-threads" leaves the meeting upon
 meeting-receive or meeting-send (or both) returning, all subsequent
 events are unsynchronized until another datum exchange is arranged.
-This means that where "pseudo-threads" share access to other objects,
-one "pseudo-thread" is guaranteed to see a value of the shared object
-which is not earlier than the value it held at the moment of datum
-exchange, but it may or may not see a later value.
+This means that where two "pseudo-threads" share access to objects
+other than the datum exchanged and they might be mutated, one
+"pseudo-thread" is guaranteed to see a value of the unexchanged shared
+objects which is not earlier than the value they held at the moment of
+datum exchange, but it may or may not see a later value.
 
 Here is an example of the use of a meeting object:
 
@@ -78,7 +79,7 @@ This procedure makes and returns a meeting object.  Meetings are
 objects on which two a-sync or compose-a-sync blocks running on the
 same event loop can synchronize by one passing a datum to the other.
 The 'loop' argument specifies the event loop (as constructed by
-make-event-loop in the (a-sync event-loop module)) with respect to
+make-event-loop in the (a-sync event-loop) module) with respect to
 which the meeting will be held: it is an error if the meeting-send or
 meeting-receive procedures are passed a different event loop as an
 argument.  The 'loop' argument is optional - if none is passed, or #f
