Add test cases and related matters for message objects

--- a/docs/meeting.texi
+++ b/docs/meeting.texi
@@ -49,6 +49,12 @@ other than the datum exchanged and they might be mutated, one
 objects which is not earlier than the value they held at the moment of
 datum exchange, but it may or may not see a later value.
 
+Having synchronization is quite nice, but nonetheless 'meeting'
+objects are at present quite limited.  It would be nice to enable a
+"pseudo-thread" to wait simultaneously on more than one meeting.
+Whether and how best to implement this is a matter for further
+consideration.
+
 Here is an example of the use of a meeting object:
 
 @example
