Add documentation for thread pool implementation

--- a/docs/event-loop.texi
+++ b/docs/event-loop.texi
@@ -56,7 +56,7 @@ consequence, so in such a case either the callback should be ready to
 handle a possibly closed port or descriptor or the worker thread
 should post the closing as an event using event-post!.
 
-This modules provides the following procedures:
+This module provides the following procedures:
 
 @deffn {Scheme Procedure} set-default-event-loop! [loop]
 The 'loop' (event loop) argument is optional.  This procedure sets the
@@ -375,8 +375,7 @@ event loop runs (as the case may be).
 This procedure acts as a form of channel through which two different
 event loops may communicate.  It also offers a means by which a master
 event loop (the waiter or default event loop) may allocate work to
-worker event loops for execution.  It would be nice to have a pool of
-worker event loops for the purpose, but that is a work for the future.
+worker event loops for execution.
 
 Depending on the circumstances, it may be desirable to provide
 throttling arguments when constructing the 'worker' event loop, in
@@ -608,8 +607,7 @@ This procedure acts, with await-task-in-event-loop!, as a form of
 channel through which two different event loops may communicate.  It
 also offers a means by which a master event loop (the waiter or
 default event loop) may allocate work to worker event loops for
-execution.  It would be nice to have a pool of worker event loops for
-the purpose, but that is a work for the future.
+execution.
 
 Depending on the circumstances, it may be desirable to provide
 throttling arguments when constructing the 'worker' event loop, in
