--- a/docs/compose.texi
+++ b/docs/compose.texi
@@ -48,13 +48,15 @@ await-generator-in-thread!, await-generator-in-event-loop!,
 await-timeout!, await-sleep!, await-getline!, await-geteveryline!,
 await-getsomelines!, await-getblock!, await-geteveryblock!,
 await-getsomeblocks!, await-put-bytevector!, await-put-string!,
-await-accept! and await-connect! procedures provided by the @ref{event
-loop,,(a-sync event-loop)} and @ref{sockets,,(a-sync sockets)} modules
-are 'compose-a-sync'-capable.  In addition, to make an ordinary body
-of code which does not block (and which does not need to invoke
-a-sync's await procedure) usable by compose-a-sync, the no-await macro
-can be used to generate a 'compose-a-sync'-capable procedure for it
-(see below).
+await-accept!, await-connect!, await-task-in-thread-pool! and
+await-generator-in-thread-pool! procedures provided by the @ref{event
+loop,,(a-sync event-loop)}, @ref{sockets,,(a-sync sockets)} and
+@ref{thread pool,,(a-sync thread-pool)} modules are
+'compose-a-sync'-capable.  In addition, to make an ordinary body of
+code which does not block (and which does not need to invoke a-sync's
+await procedure) usable by compose-a-sync, the no-await macro can be
+used to generate a 'compose-a-sync'-capable procedure for it (see
+below).
 
 Each binding is initialized as if sequentially (although it is done
 asynchronously on the relevant event loop).  An initialization does
