--- a/docs/thread-pool.texi
+++ b/docs/thread-pool.texi
@@ -185,7 +185,9 @@ returning, and if #t it will return straight away.
 
 After this procedure has been called, any attempt to add further tasks
 with the thread-pool-add! procedure will fail, and that procedure will
-throw a 'thread-pool-error exception.
+throw a 'thread-pool-error exception.  The same exception will be
+thrown if this procedure is applied to a thread pool to which this
+procedure has previously been applied.
 
 This procedure is thread safe (any thread may call it) unless the
 non-blocking setting is #f, in which case no task running on the
